--- a/testing.ipynb
+++ b/testing.ipynb
@@ -13,6 +13,439 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MORE FACTORS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Symbol</th>\n",
+       "      <th>Company Name</th>\n",
+       "      <th>FS_ID</th>\n",
+       "      <th>RETURN</th>\n",
+       "      <th>RCP</th>\n",
+       "      <th>RBP</th>\n",
+       "      <th>RSP</th>\n",
+       "      <th>REP</th>\n",
+       "      <th>RDP</th>\n",
+       "      <th>RPM71</th>\n",
+       "      <th>...</th>\n",
+       "      <th>BR2</th>\n",
+       "      <th>EP1</th>\n",
+       "      <th>EP2</th>\n",
+       "      <th>RV1</th>\n",
+       "      <th>RV2</th>\n",
+       "      <th>CTEF</th>\n",
+       "      <th>9MFR</th>\n",
+       "      <th>8MFR</th>\n",
+       "      <th>LIT</th>\n",
+       "      <th>TARGET</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DATE</th>\n",
+       "      <th>SEDOL</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">2003-01-01</th>\n",
+       "      <th>200001</th>\n",
+       "      <td>AMZN</td>\n",
+       "      <td>AMAZON.COM INC</td>\n",
+       "      <td>RMCVZ9-S-US</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>60.1667</td>\n",
+       "      <td>24.6395</td>\n",
+       "      <td>6.1009</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>97.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200169</th>\n",
+       "      <td>AAMRQ</td>\n",
+       "      <td>AMERICAN AIRLINES GROUP INC</td>\n",
+       "      <td>LQCKJX-S-US</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>13.5000</td>\n",
+       "      <td>38.4409</td>\n",
+       "      <td>47.6129</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200230</th>\n",
+       "      <td>ABT</td>\n",
+       "      <td>ABBOTT LABORATORIES</td>\n",
+       "      <td>Q1KJQ2-S-US</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>46.3333</td>\n",
+       "      <td>32.8892</td>\n",
+       "      <td>26.0335</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>42.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200247</th>\n",
+       "      <td>AES</td>\n",
+       "      <td>AES CORP (THE)</td>\n",
+       "      <td>Q0KPX4-S-US</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>42.6667</td>\n",
+       "      <td>80.2576</td>\n",
+       "      <td>100.0000</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>97.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200418</th>\n",
+       "      <td>ANF</td>\n",
+       "      <td>ABERCROMBIE &amp; FITCH  -CL A</td>\n",
+       "      <td>QF2V5D-S-US</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>63.0000</td>\n",
+       "      <td>55.2264</td>\n",
+       "      <td>52.9502</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">2004-09-01</th>\n",
+       "      <th>BYQQ3P</th>\n",
+       "      <td>CCEP</td>\n",
+       "      <td>COCA-COLA EUROPEAN PARTNERS</td>\n",
+       "      <td>HZ6Y5P-S-US</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>25.8333</td>\n",
+       "      <td>67.2402</td>\n",
+       "      <td>67.1790</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>53.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BYX4D5</th>\n",
+       "      <td>HPQ</td>\n",
+       "      <td>HEWLETT-PACKARD COMPANY</td>\n",
+       "      <td>V601BM-S-US</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BYXB1T</th>\n",
+       "      <td>ACIIQ</td>\n",
+       "      <td>ARCH COAL INC</td>\n",
+       "      <td>Q4YYS0-S-US</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>39.0000</td>\n",
+       "      <td>13.1201</td>\n",
+       "      <td>13.0895</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>22.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BYXD7B</th>\n",
+       "      <td>DXC</td>\n",
+       "      <td>COMPUTER SCIENCES CORPORATION</td>\n",
+       "      <td>CP765L-S-US</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>46.5000</td>\n",
+       "      <td>71.4912</td>\n",
+       "      <td>71.5481</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>34.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BZ12TX</th>\n",
+       "      <td>ATGE</td>\n",
+       "      <td>DEVRY EDUCATION GROUP INC.</td>\n",
+       "      <td>MZ0G63-S-US</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>19497 rows × 28 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Symbol                   Company Name        FS_ID  RETURN  \\\n",
+       "DATE       SEDOL                                                               \n",
+       "2003-01-01 200001   AMZN                 AMAZON.COM INC  RMCVZ9-S-US     9.0   \n",
+       "           200169  AAMRQ    AMERICAN AIRLINES GROUP INC  LQCKJX-S-US    14.0   \n",
+       "           200230    ABT            ABBOTT LABORATORIES  Q1KJQ2-S-US    27.0   \n",
+       "           200247    AES                 AES CORP (THE)  Q0KPX4-S-US   100.0   \n",
+       "           200418    ANF     ABERCROMBIE & FITCH  -CL A  QF2V5D-S-US    10.0   \n",
+       "...                  ...                            ...          ...     ...   \n",
+       "2004-09-01 BYQQ3P   CCEP    COCA-COLA EUROPEAN PARTNERS  HZ6Y5P-S-US    53.0   \n",
+       "           BYX4D5    HPQ        HEWLETT-PACKARD COMPANY  V601BM-S-US     0.0   \n",
+       "           BYXB1T  ACIIQ                  ARCH COAL INC  Q4YYS0-S-US    22.0   \n",
+       "           BYXD7B    DXC  COMPUTER SCIENCES CORPORATION  CP765L-S-US    34.0   \n",
+       "           BZ12TX   ATGE     DEVRY EDUCATION GROUP INC.  MZ0G63-S-US     0.0   \n",
+       "\n",
+       "                     RCP    RBP    RSP    REP   RDP  RPM71  ...   BR2    EP1  \\\n",
+       "DATE       SEDOL                                            ...                \n",
+       "2003-01-01 200001    6.0    1.0   28.0    8.0  39.0   99.0  ...  97.0    9.0   \n",
+       "           200169   97.0  100.0  100.0    1.0  39.0    2.0  ...  26.0    1.0   \n",
+       "           200230   28.0   12.0   17.0   30.0  66.0   66.0  ...  62.0   16.0   \n",
+       "           200247  100.0  100.0   98.0  100.0  39.0    2.0  ...  26.0  100.0   \n",
+       "           200418   35.0   17.0   43.0   76.0  39.0   44.0  ...  40.0   71.0   \n",
+       "...                  ...    ...    ...    ...   ...    ...  ...   ...    ...   \n",
+       "2004-09-01 BYQQ3P   86.0   57.0   92.0   71.0  58.0   22.0  ...   3.0   70.0   \n",
+       "           BYX4D5    0.0    0.0    0.0    0.0   0.0    0.0  ...   0.0    0.0   \n",
+       "           BYXB1T   13.0    8.0   16.0   15.0  41.0   91.0  ...  57.0   18.0   \n",
+       "           BYXD7B   79.0   81.0   87.0   68.0  41.0   63.0  ...  91.0   14.0   \n",
+       "           BZ12TX    0.0    0.0    0.0    0.0   0.0    0.0  ...   0.0    0.0   \n",
+       "\n",
+       "                     EP2   RV1   RV2     CTEF     9MFR      8MFR   LIT  TARGET  \n",
+       "DATE       SEDOL                                                                \n",
+       "2003-01-01 200001    6.0  83.0  84.0  60.1667  24.6395    6.1009  46.0    97.0  \n",
+       "           200169    1.0  11.0   1.0  13.5000  38.4409   47.6129  22.0     1.0  \n",
+       "           200230   10.0  57.0  73.0  46.3333  32.8892   26.0335  91.0    42.0  \n",
+       "           200247  100.0   3.0   3.0  42.6667  80.2576  100.0000  82.0    97.0  \n",
+       "           200418   71.0  85.0  37.0  63.0000  55.2264   52.9502  99.0   100.0  \n",
+       "...                  ...   ...   ...      ...      ...       ...   ...     ...  \n",
+       "2004-09-01 BYQQ3P   71.0   4.0   4.0  25.8333  67.2402   67.1790  39.0    53.0  \n",
+       "           BYX4D5    0.0   0.0   0.0   0.0000   0.0000    0.0000   0.0     0.0  \n",
+       "           BYXB1T   36.0  14.0  96.0  39.0000  13.1201   13.0895  50.0    22.0  \n",
+       "           BYXD7B    9.0  51.0  49.0  46.5000  71.4912   71.5481  69.0    34.0  \n",
+       "           BZ12TX    0.0   0.0   0.0   0.0000   0.0000    0.0000   0.0     0.0  \n",
+       "\n",
+       "[19497 rows x 28 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sedols = pd.read_csv(\"data/sedols.csv\", index_col=False)\n",
+    "df = pd.read_csv(\n",
+    "    './data/rus1000_stocks_factors.csv', \n",
+    "    on_bad_lines='skip', \n",
+    "    header = 2, \n",
+    "    nrows = 20000, \n",
+    "    low_memory=False, \n",
+    "    converters={\n",
+    "        'SEDOL': lambda x: x[:6], \n",
+    "        'DATE': lambda x: pd.to_datetime(x) + pd.offsets.MonthBegin(1)\n",
+    "    },\n",
+    "    # parse_dates=['DATE'], \n",
+    "    index_col=[2, 3]\n",
+    ").sort_index()\n",
+    "\n",
+    "df = df[df.index.get_level_values(\"SEDOL\").isin(sedols.SEDOLS)]\n",
+    "df = df[~df.index.duplicated(keep='first')]\n",
+    "\n",
+    "df[\"TARGET\"] = df.groupby(level=\"SEDOL\").RETURN.shift(-1)\n",
+    "# print(df)\n",
+    "df = df.groupby(level=1).fillna(method='ffill').fillna(0)\n",
+    "df.sort_index(inplace=True)\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
